added test files & browsersync

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -1,4 +1,5 @@
-/* line 1, ../src/sass/_styles.scss */
+/* line 1, ../src/scss/_styles.scss */
 body {
-  background-color: black;
+  background-color: cornflowerblue;
+  color: black;
 }
