--- a/app/webroot/src/scss/sprites.scss
+++ b/app/webroot/src/scss/sprites.scss
@@ -1,9 +1,10 @@
-/* line 42, icons/*.png */
+/* line 48, icons/*.png */
 .icons-sprite, .icons-icon-1 {
-  background: url('../img/icons-sf085560312.png') no-repeat;
+  background-image: url('../img/icons-sf085560312.png');
+  background-repeat: no-repeat;
 }
 
-/* line 60, d:/Programs/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 84, ../../../../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-core-1.0.0.alpha.19/stylesheets/compass/utilities/sprites/_base.scss */
 .icons-icon-1 {
   background-position: 0 0;
   height: 60px;
