--- a/app/webroot/src/scss/sprites.scss
+++ b/app/webroot/src/scss/sprites.scss
@@ -1,12 +1,14 @@
 /* line 48, icons/*.png */
-.icons-sprite, .icons-icon-1 {
-  background-image: url('../img/icons-sf085560312.png');
+.icons-sprite, .icons-dasda {
+  background-image: url('../img/icons-s67fe87e30b.png');
   background-repeat: no-repeat;
 }
 
-/* line 84, ../../../../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-core-1.0.0.alpha.19/stylesheets/compass/utilities/sprites/_base.scss */
-.icons-icon-1 {
+/* line 84, ../../../../../../RailsInstaller/Ruby1.9.3/lib/ruby/gems/1.9.1/gems/compass-core-1.0.0/stylesheets/compass/utilities/sprites/_base.scss */
+.icons-dasda {
   background-position: 0 0;
   height: 60px;
   width: 60px;
 }
+
+/*# sourceMappingURL=generate_sprites.css.map */
